test-integracion-insert

--- a/app/src/Accounting/Infrastructure/Persistence/Doctrine/Mapping/Provider.Product.ProviderProduct.orm.yml
+++ b/app/src/Accounting/Infrastructure/Persistence/Doctrine/Mapping/Provider.Product.ProviderProduct.orm.yml
@@ -8,7 +8,7 @@ Misa\Accounting\Domain\Provider\Product\ProviderProduct:
             generator:
                 strategy: NONE
     fields:
-        range:
+        level:
             type: smallint
     manyToOne:
         provider:
