--- a/app/composer.json
+++ b/app/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php": ">=5.5.9",
         "doctrine/doctrine-bundle": "^1.6",
-        "doctrine/doctrine-migrations-bundle": "^1.2",
+        "doctrine/doctrine-migrations-bundle": "1.2.1",
         "doctrine/orm": "^2.5",
         "firebase/php-jwt": "^5.0",
         "friendsofsymfony/rest-bundle": "^2.2",
