--- a/app/app/config/doctrine.yml
+++ b/app/app/config/doctrine.yml
@@ -12,6 +12,28 @@ doctrine:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: false
+        metadata_cache_driver:
+            type: memcached
+            host: "%memcached_host%"
+            port: "%memcached_port%"
+            instance_class: Memcached
+            class: Doctrine\Common\Cache\MemcacheCache
+        query_cache_driver:
+            type: memcached
+            host: "%memcached_host%"
+            port: "%memcached_port%"
+            instance_class: Memcached
+            class: Doctrine\Common\Cache\MemcacheCache
+        result_cache_driver:
+            type: memcached
+            host: "%memcached_host%"
+            port: "%memcached_port%"
+            instance_class: Memcached
+            class: Doctrine\Common\Cache\MemcacheCache
+        second_level_cache:
+            enabled:  true
+            log_enabled: true
+
         mappings:
             accounting:
                 is_bundle: false
