--- a/docker/php-apache/Dockerfile
+++ b/docker/php-apache/Dockerfile
@@ -9,6 +9,9 @@ RUN apt-get update \
  && curl -sS https://getcomposer.org/installer \
   | php -- --install-dir=/usr/local/bin --filename=composer
 
+RUN apt-get update && apt-get install -y libmemcached-dev zlib1g-dev \
+    && pecl install memcached-3.0.3 \
+    && docker-php-ext-enable memcached
 # Hosts
 RUN su -c "echo '127.0.0.1 local.app.com' >> /etc/hosts"
 
