--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,11 @@ services:
     volumes:
       - ./docker/mysql/sql:/docker-entrypoint-initdb.d
 
+  memcached:
+    image: memcached:alpine
+    ports:
+      - 11211:11211
+
   solr:
     image: jguillermo/misa-accounting:solr
     ports:
@@ -33,13 +38,3 @@ services:
 #      - employee
 
 #    # sudo chmod o+w -R solr
-
-#  mongo:
-#    image: jguillermo/mongo:3.4
-#    ports:
-#      - 27018:27017
-##    environment:
-##      - MONGO_INITDB_ROOT_USERNAME=admin
-##      - MONGO_INITDB_ROOT_PASSWORD=admin123456
-#    volumes:
-#      - ./build/mongo/data:/docker-entrypoint-initdb.d
