--- a/app/src/Accounting/Infrastructure/Ui/AccountingBundle/Resources/config/services.yml
+++ b/app/src/Accounting/Infrastructure/Ui/AccountingBundle/Resources/config/services.yml
@@ -9,6 +9,8 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
+    ###  event
+    Misa\Accounting\Application\Event\Provider\MngEvent: ~
 
     ###    services
     Misa\Accounting\Application\Services\Provider\MngService: ~
