--- a/app/composer.json
+++ b/app/composer.json
@@ -22,6 +22,7 @@
     },
     "require": {
         "php": ">=5.5.9",
+        "aws/aws-sdk-php-symfony": "^1.3",
         "beberlei/assert": "^2.7",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "1.2.1",
