--- a/app/composer.json
+++ b/app/composer.json
@@ -28,9 +28,8 @@
         "doctrine/doctrine-migrations-bundle": "1.2.1",
         "doctrine/orm": "^2.5",
         "firebase/php-jwt": "^5.0",
-        "friendsofsymfony/rest-bundle": "^2.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "jms/serializer-bundle": "^2.1",
+        "maxbanton/cwh": "^1.1",
         "nelmio/solarium-bundle": "^2.4",
         "ramsey/uuid": "^3.7",
         "sensio/distribution-bundle": "^5.0.19",
