--- a/app/app/config/services.yml
+++ b/app/app/config/services.yml
@@ -28,3 +28,8 @@ services:
     Misa\Common\Service\Auth0:
         class: MisaSdk\Common\Implement\MisaJwt
         arguments: ['%app_secret%']
+
+    published_message.listener:
+        class: MisaSdk\Common\EventListener\MisaExceptionListener
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
