--- a/app/composer.json
+++ b/app/composer.json
@@ -28,6 +28,7 @@
         "doctrine/doctrine-migrations-bundle": "1.2.1",
         "doctrine/orm": "^2.5",
         "firebase/php-jwt": "^5.0",
+        "friendsofsymfony/rest-bundle": "^2.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "maxbanton/cwh": "^1.1",
         "nelmio/solarium-bundle": "^2.4",
