--- a/app/src/Accounting/Infrastructure/Ui/AccountingBundle/Resources/config/services.yml
+++ b/app/src/Accounting/Infrastructure/Ui/AccountingBundle/Resources/config/services.yml
@@ -25,6 +25,9 @@ services:
     Misa\Accounting\Application\Services\Source\MngService: ~
     Misa\Accounting\Application\Services\Source\SearchService: ~
 
+    #product item
+    Misa\Accounting\Application\Services\Product\Item\MngService: ~
+
 
     ###   repository
     #persistence provider
