--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -22,12 +22,12 @@ services:
       service: solr
 
   cli:
-    extends:
-      file: docker-compose.tasks.yml
-      service: cli
+    image: jguillermo/api-test:latest
+    volumes:
+      - ./app/tests/e2e:/app/e2e
     depends_on:
        - php
        - mysql
        - memcached
        - solr
-    command: ["/tmp/wait-for-it.sh --timeout=50 mysql:3306", "--", "composer integration-test"]
+    command: "/tmp/wait-for-it.sh mysql:3306 -t 50 -- npm test"
